@@ -4,14 +4,17 @@ import com.capstone.pethouse.domain.code.dto.CodeRequest;
 import com.capstone.pethouse.domain.code.dto.CodeVo;
 import com.capstone.pethouse.domain.code.entity.Code;
 import com.capstone.pethouse.domain.code.repository.CodeRepository;
+import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
@@ -21,54 +24,53 @@ public class CodeService {
     private final CodeRepository codeRepository;
 
     @Transactional(readOnly = true)
-    public List<CodeVo> getCodes(int pageNum, int pageSize, String groupCode) {
-        int page = Math.max(0, pageNum - 1);
-        PageRequest pageRequest = PageRequest.of(page, pageSize, Sort.by(Sort.Direction.DESC, "regDate"));
-        Page<Code> codePage;
+    public Page<CodeVo> getCodes(Pageable pageable, String groupCode) {
+        Page<Code> codePage = (groupCode != null && !groupCode.isBlank())
+                ? codeRepository.findByGroupCode(groupCode, pageable)
+                : codeRepository.findAll(pageable);
 
-        if (groupCode != null && !groupCode.isEmpty()) {
-            codePage = codeRepository.findByGroupCode(groupCode, pageRequest);
-        } else {
-            codePage = codeRepository.findAll(pageRequest);
-        }
-
-        return codePage.getContent().stream()
-                .map(code -> CodeVo.withChildren(code, List.of()))
-                .collect(Collectors.toList());
+        return codePage.map(CodeVo::from);
     }
 
     @Transactional(readOnly = true)
     public List<CodeVo> getCodeTree(String groupCode) {
         List<Code> allCodes = codeRepository.findAll(Sort.by(Sort.Direction.ASC, "code"));
 
+        Map<String, List<Code>> groupByParents = allCodes.stream()
+                .collect(Collectors.groupingBy(code ->
+                        (code.getGroupCode() == null) ? "" : code.getGroupCode()
+                ));
+
+        List<Code> roots;
         if (groupCode == null || groupCode.isEmpty()) {
-            return allCodes.stream()
-                    .filter(c -> c.getGroupCode() == null || c.getGroupCode().isEmpty())
-                    .map(root -> mapToTree(root, allCodes))
-                    .collect(Collectors.toList());
+            roots = groupByParents.getOrDefault("", Collections.emptyList());
         } else {
-            return allCodes.stream()
-                    .filter(c -> c.getCode().equals(groupCode))
-                    .map(root -> mapToTree(root, allCodes))
+            roots = allCodes.stream()
+                    .filter(code -> code.getCode().equals(groupCode))
                     .collect(Collectors.toList());
         }
+
+        return roots.stream()
+                .map(root -> mapToTree(root, groupByParents))
+                .toList();
     }
 
-    private CodeVo mapToTree(Code parent, List<Code> allCodes) {
-        List<CodeVo> children = allCodes.stream()
-                .filter(c -> parent.getCode().equals(c.getGroupCode()))
-                .map(c -> mapToTree(c, allCodes))
-                .collect(Collectors.toList());
+    private CodeVo mapToTree(Code parent, Map<String, List<Code>> groupByParent) {
+        List<CodeVo> children = groupByParent.getOrDefault(parent.getCode(), Collections.emptyList())
+                .stream()
+                .map(code -> mapToTree(code, groupByParent))
+                .toList();
+
         return CodeVo.withChildren(parent, children);
     }
+
 
     @Transactional(readOnly = true)
     public CodeVo getCode(String id) {
         Code code = codeRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("코드를 찾을 수 없습니다."));
+                .orElseThrow(() -> new EntityNotFoundException("코드를 찾을 수 없습니다."));
 
-        List<Code> allCodes = codeRepository.findAll(Sort.by(Sort.Direction.ASC, "code"));
-        return mapToTree(code, allCodes);
+        return CodeVo.from(code);
     }
 
     @Transactional(readOnly = true)
@@ -81,25 +83,29 @@ public class CodeService {
     @Transactional
     public CodeVo createCode(CodeRequest request) {
         if (codeRepository.existsById(request.code())) {
-            throw new IllegalArgumentException("이미 존재하는 코드입니다.");
+            throw new IllegalStateException("이미 존재하는 코드입니다.");
         }
-        Code code = Code.of(request.code(), request.groupCode() != null ? request.groupCode() : "", request.codeName());
+        Code code = Code.of(
+                request.code(),
+                request.groupCode(),
+                request.codeName()
+        );
         return CodeVo.from(codeRepository.save(code));
     }
 
     @Transactional
     public CodeVo updateCode(CodeRequest request) {
         Code code = codeRepository.findById(request.code())
-                .orElseThrow(() -> new IllegalArgumentException("코드를 찾을 수 없습니다."));
+                .orElseThrow(() -> new EntityNotFoundException("코드를 찾을 수 없습니다."));
         code.update(request.groupCode(), request.codeName());
         return CodeVo.from(code);
     }
 
     @Transactional
     public void deleteCode(String id) {
-        if (!codeRepository.existsById(id)) {
-            throw new IllegalArgumentException("코드를 찾을 수 없습니다.");
-        }
-        codeRepository.deleteById(id);
+        Code code = codeRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("코드를 찾을 수 없습니다."));
+
+        codeRepository.delete(code);
     }
 }
